@@ -64,12 +64,12 @@ struct policy {
         struct group *vers;
 };
 
-struct policy *parsePolicyFile(char *filename);
+struct policy *parsePolicyFile(const char *filename);
 size_t findMember(const char *name);
 int checkSigExist(const char *name);
 char *getKeyID (const struct match *mtc);
 char *getSigKeyID (const char *deb, const char *type);
-int gpgVerify(const char *deb, struct match *mtc, const char *tmp_file);
+int gpgVerify(const char *data, struct match *mtc, const char *sig);
 void clear_policy(void);
 
 #define DS_LEV_ALWAYS 3
