@@ -13,7 +13,7 @@
 - Add some more info to the verbose output.
   STATUS: in progress
 
-- Testing setup. This is the way I invision it. Basically we have
+- Testing setup. This is the way I envision it. Basically we have
   directories with sample data. Each directory contains some related parts
   of a Debian file (control.tar.gz, data.tar.gz), signatures and
   policy's/keyrings. We then have some XML files (god I love XML :) that
@@ -27,3 +27,5 @@
 - Obviously this needs some serious auditing, not matter how good I think
   my coding is. Generally I've used static buffers and length constrained
   functions (snprintf, strncmp) where ever possible.
+
+- i18n
